Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40685

QmlIncubator double deletion crash

    XMLWordPrintable

Details

    • 01c6af3fc940378e8eee41a9fb8273420ef5a7e1

    Description

      Deleting a component instance during incubation can cause double deletion. This can be see most easily by removing these lines from the qqmlincubator objectDeleted test:

              // We have to cheat and manually remove it from the creator->allCreatedObjects
              // otherwise we will do a double delete
              QQmlIncubatorPrivate *incubatorPriv = QQmlIncubatorPrivate::get(&incubator);
              incubatorPriv->creator->allCreatedObjects().pop();
      

      Attachments

        For Gerrit Dashboard: QTBUG-40685
        # Subject Branch Project Status CR V

        Activity

          People

            martinj Martin Jones
            martinj Martin Jones
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes